src/test/fail/trigger_return_expected.ly
###
NoReturnError: Function f completed without returning a value.
Traceback:
    Function f at line 9
    Function __main__ at line 9
###

define f( => integer) { }
f()
